--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,6 @@
 	<html class="no-js" lang="en">
 
 		<head>
-			<!-- meta data -->
 			<meta charset="utf-8">
 			<meta http-equiv="X-UA-Compatible" content="IE=edge">
 			<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -13,17 +12,12 @@
 			<link rel="stylesheet" href="~/css/font-awesome.min.css" />
 			<link rel="stylesheet" href="~/css/linearicons.css" />
 			<link rel="stylesheet" href="~/css/owl.carousel.min.css" /> 
-			<link rel="stylesheet" href="~/css/owl.theme.default.min.css" /> 
+			<link rel="stylesheet" href="~/css/owl.the+me.default.min.css" /> 
 			<link rel="stylesheet" href="~/css/responsive.css" /> 
 			<link rel="stylesheet" href="~/css/site.css" />
 			<link rel="stylesheet" href="~/css/style.css"/>
-			<!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-			<!--font-family-->
 			<link href="https://fonts.googleapis.com/css?family=Poppins:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
-
 			<link href="https://fonts.googleapis.com/css?family=Rufina:400,700" rel="stylesheet">
-			
-			<!-- title of site -->
 			<title>EMGMBD</title>
 
 		</head>
@@ -31,11 +25,11 @@
 			.navbar {
 		height: auto; /* S'assure que la hauteur s'adapte au contenu */
 		max-height: 70px; /* Vous pouvez ajuster cette valeur */
-	}
+			}
 
-	.navbar-nav {
-		line-height: normal; /* Assure que la hauteur des éléments de menu est correcte */
-	}
+			.navbar-nav {
+				line-height: normal; /* Assure que la hauteur des éléments de menu est correcte */
+			}
 
 		</style>
 		<body>
@@ -66,10 +60,7 @@
 						<button class="welcome-btn" onclick="window.location.href='#'">contactez-nous</button>
 					</div>
 				</div>
-
-				
-
-			</section><!--/.welcome-hero-->
+		</section><!--/.welcome-hero-->
 			<!--welcome-hero end -->
 
 			<!--service start -->
@@ -464,4 +455,4 @@
 					
 		</body>
 		
-	</html>
+ </html>
