--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -25,6 +25,12 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                         </li>
+                                        <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="btn btn-primary" asp-controller="Home" asp-action="Connexion">Se connecter</a>
+                    </li>
+                </ul>
+
                     </ul>
                 </div>
             </div>
